data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2268.wast
;; 9. **Test Description**: Implement a loop inside a block that performs conditional jumps using `br_if`, with conditions evaluated from iterative arithmetic operations within the loop body.    - **Constraint Checked**: Tests handling of iterative conditions and proper branching based on loop operations.    - **Relation to Condition Evaluation**: Errors in loop condition evaluations result in wrong branches and loop execution paths.

(assert_invalid
  (module
    (func $loop-in-block (result i32)
      (block (result i32)
        (loop (result i32)
          (i32.const 0)
          (br_if 1 (i32.const 0))
          (i32.add (i32.const 1) (i32.const 1))
          (br 0)
        )
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)